# OpnVM

./: CMakeLists.txt
example/: CMakeLists.txt
example/src/: main.cpp
lib/: CMakeLists.txt
lib/include/OpnVM/: Controls.h  Machine.h  OpCode.h  VM.h
lib/src/: Controls.cpp  Machine.cpp  OpnVM.cpp
